--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
 <script src="src/polyfills.bundle.5adbf.js" charset="utf-8"> </script>
 
 <!-- SystemJS support. -->
-<script src="src/system.bundle.21815.js" charset="utf-8"> </script>
+<script src="src/system.bundle.36d3c.js" charset="utf-8"> </script>
 
 <!-- Import map -->
-<script src="src/import-map.f1c71.json" type="systemjs-importmap" charset="utf-8"> </script>
+<script src="src/import-map.309e3.json" type="systemjs-importmap" charset="utf-8"> </script>
 
 <script>
-    System.import('./index.93c96.js').catch(function(err) { console.error(err); })
+    System.import('./index.58f76.js').catch(function(err) { console.error(err); })
 </script>
 
 </body>
